# gtk

./: .gitignore  Makefile.am  configure.ac
clutter/: .gitignore  Makefile.am  clutter.h  clutteractor.c  clutteractor.h  clutteractorprivate.h  clutterenumtypes.c.template  clutterenumtypes.h.template  cluttermacros.h  clutterpoint.c  clutterrect.c  cluttersize.c  cluttertypes.h
demos/gtk-demo/: Makefile.am
docs/reference/gdk/: gdk3-sections.txt
docs/reference/gtk/: gtk-docs.sgml  gtk3-sections.txt
gdk/: Makefile.am  gdkcairo.c  gdkcairo.h  gdkglcontext.c  gdkglcontext.h  gdkglcontextprivate.h  gdkinternals.h  gdktypes.h  gdkwindow.c  gdkwindow.h  gdkwindowimpl.h
gdk/wayland/: gdkdisplay-wayland.c  gdkdisplay-wayland.h  gdkglcontext-wayland.c  gdkglcontext-wayland.h  gdkscreen-wayland.c  gdkwindow-wayland.c
gdk/x11/: gdkdisplay-x11.c  gdkglcontext-x11.c  gdkglcontext-x11.h  gdkwindow-x11.c
gsk/: Makefile.am  gsk.h  gskdebug.c  gskdebug.h  gskenums.h  gskenumtypes.c.template  gskenumtypes.h.template  gsklayer.c  gsklayer.h  gsklayercontent.c  gsklayercontent.h  gsklayercontentprivate.h  gsklayeriter.c  gsklayeriter.h  gsklayerprivate.h  gsklayerstate.c  gsklayoutconstraint.c  gsklayoutconstraint.h  gsklayoutmanager.c  gsklayoutmanager.h  gskmacros.h  gskrenderer.c  gskrenderer.h  gsktypes.h
gtk/: Makefile.am  gtk.h  gtkdrawingarea.c  gtkglarea.c  gtkglarea.h  gtkmarshalers.list  gtkwidget.c  gtkwidget.h  gtkwidgetprivate.h
tests/: Makefile.am  gdkgears.c  gtkgears.c  testglarea.c  testscene.c  testscenelayout.c
testsuite/: Makefile.am
testsuite/clutter/: Makefile.am  actor-graph.c  actor-iter.c  base-types.c
